# morse

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tryout.yml
src/morse/: __init__.py  __main__.py  alphabet.py  morse.py  morse_sender.py  timer.py  transmitters.py
tests/: test_morse.py
