[tool.poetry]
name = "morse"
version = "0.9.0"
description = "Send morse messages"
authors = ["Morten Bruun"]
license = "MIT"
readme = "README.md"

[tool.pylint.format]
max-line-length = 120

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.poetry.scripts]
morse = "morse.morse:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
